--- a/source/src/main/webapp/css/SearchResult.css
+++ b/source/src/main/webapp/css/SearchResult.css
@@ -215,6 +215,7 @@ h2 {
 
 /* カードも削除ボタンも通常時 */
 .student-card {
+	border: 1px solid #333; /* 太さと色 */
     background-color: white;
     border-radius: 10px;
     padding: 15px;
