--- a/source/src/main/webapp/css/IndividualResults.css
+++ b/source/src/main/webapp/css/IndividualResults.css
@@ -395,3 +395,10 @@ button:hover {
 	margin: 0;
 	white-space: nowrap;
 }
+
+.personality-display {
+  font-weight: bold;
+  font-size: 1.2em;
+  color: #333;
+  margin-top: 0.5em;
+}
